--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,9 +12,9 @@
 
   {{ content }}
 
-  
+  {% if page.url == "/index.html" %}
   <script src="/assets/js/functions.js"></script>
-  
+  {% endif %}
 
   </body>
 </html>
