--- a/assets/css/1-base/_vars.sass
+++ b/assets/css/1-base/_vars.sass
@@ -1,7 +1,7 @@
 $primary-color: #F6C
 $text-color: #2E2D33
 $accent-color: #000
-$bg-color: #FFFFE5
+$bg-color: #fff
 $link-color: $accent-color
 $selection-color: #A1B6FF
 
