--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,15 +6,13 @@
     <title>{{ page.title }}</title>
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="/assets/css/main.css">
-    <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+    <script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
   </head>
   <body>
 
   {{ content }}
 
-  {% if page.url == "/index.html" %}
   <script src="/assets/js/functions.js"></script>
-  {% endif %}
-
+  
   </body>
 </html>
