--- a/assets/css/1-base/_vars.sass
+++ b/assets/css/1-base/_vars.sass
@@ -3,5 +3,5 @@ $text-color: #2E2D33
 $accent-color: #000
 $bg-color: #fff
 $link-color: $accent-color
-$selection-color: #A1B6FF
+$selection-color: none
 
