--- a/_jadefiles/section-youtube.jade
+++ b/_jadefiles/section-youtube.jade
@@ -3,9 +3,9 @@ section.youtube#youtube
 		
 		.col-1
 			.video-strip
-			.flex-video <iframe src="https://www.youtube.com/embed/89sacBIEq4g?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+			.flex-video <iframe width="560" height="315" src="https://www.youtube.com/embed/SooDIV3tmlw" frameborder="0" allowfullscreen></iframe>
 	
 
 		.col-1.order-first
-			p.home-lead.outdented ...teaching everyone how to make web sites on YouTube...
+			p.home-lead.outdented 영상광고 디자인
 			a(href="http://youtube.com/devtipsfordesigners").home-cta Watch on YouTube
