--- a/assets/css/3-sections/_home-youtube.sass
+++ b/assets/css/3-sections/_home-youtube.sass
@@ -1,7 +1,6 @@
 section.youtube
 	background:
-		image: url(../img/youtube-bg.gif)
-		color: #e20a0a
+		image: url(../img/article-bg.jpg)
 		position: center
 		size: cover
 	color: white
