--- a/assets/css/4-layouts/_home.sass
+++ b/assets/css/4-layouts/_home.sass
@@ -2,9 +2,18 @@
 	display: flex
 	min-height: 100vh
 	overflow: hidden
-
 	@media (max-width: 775px)
 		display: block
+
+.home-block
+	overflow: hidden
+	width: 100%
+
+
+.home-start
+	flex: 1
+	padding: 0px
+		
 
 .home-sections
 	flex: 1
