--- a/_jadefiles/header.jade
+++ b/_jadefiles/header.jade
@@ -2,7 +2,7 @@ mixin nav-content()
   ul
     li: a(href="#about") About
     li: a(href="#youtube") YouTube
-    //li: a(href="#mentoring") Mentoring
+    li: a(href="#mentoring") Mentoring
     li: a(href="#articles") Articles
     li: a(href="#vine") Vine
     li: a(href="#design") Design
