--- a/assets/css/3-sections/_home-about.sass
+++ b/assets/css/3-sections/_home-about.sass
@@ -1,21 +1,23 @@
 section.about
 	background: 
-		image: url(../img/um.png)
-		position: center bottom
+		image: url(../img/about15.png)
+		position: center
 		//이미지사이즈를 크기에 맞춰줌
-		size: cover
+		// size: cover
+	height: 1000px
 
-	h2
-		color: #3f3f42
-		font:
-			size: 60px
-			weight: 400
-		line-height: 1
-		margin-left: -128px
-		margin-top: 0
 
-	.home-lead
-		padding-bottom: 150px
+	// h2
+	// 	color: #3f3f42
+	// 	font:
+	// 		size: 60px
+	// 		weight: 400
+	// 	line-height: 1
+	// 	margin-left: -128px
+	// 	margin-top: 0
+
+	// .home-lead
+	// 	padding-bottom: 250px
 
 @media (max-width: 640px)
 	section.about
