--- a/_jadefiles/section-youtube.jade
+++ b/_jadefiles/section-youtube.jade
@@ -7,5 +7,5 @@ section.youtube#youtube
 	
 
 		.col-1.order-first
-			p.home-lead.outdented 영상광고 디자인
+			p.home-lead.outdented Advertising Design
 			a(href="http://youtube.com/devtipsfordesigners").home-cta Watch on YouTube
