--- a/assets/css/3-sections/_home-youtube.sass
+++ b/assets/css/3-sections/_home-youtube.sass
@@ -3,7 +3,7 @@ section.youtube
 		image: url(../img/article-bg.jpg)
 		position: center
 		size: cover
-	color: white
+	color: black
 	
 	.home-cta
 		color: #e20a0a
