--- a/assets/css/3-sections/_home-mentoring.sass
+++ b/assets/css/3-sections/_home-mentoring.sass
@@ -10,7 +10,7 @@ section.mentoring
 		color: #2cb4db
 
 	.home-lead
-		margin-top: 250px
+		margin-top: 350px
 
 	.faces
 		list-style: none
@@ -25,13 +25,13 @@ section.mentoring
 			top: 0px
 
 	.face
-		height: 80px
-		width: 80px
+		height: 120px
+		width: 200px
 		background:
 			size: cover
 			position: center
-		border-radius: 50%
-		margin-bottom: 35px
+		// border-radius: 10%
+		margin: 20px 10px 20px 0px
 		box-shadow: 0px 4px 8px rgba(0,0,0,0.4)
 		position: relative
 		cursor: pointer
