--- a/_jadefiles/section-mentoring.jade
+++ b/_jadefiles/section-mentoring.jade
@@ -14,7 +14,7 @@ section.mentoring
 
 				+face("/assets/img/testimonial-avatars/ed3.png","나의 어렸을적 꿈은 멋진 집에서 내가 원하는 인테리어로 집을 꾸미고 내가 좋아하는 취미생활을 하며'혼자'서 멋지게 사는 것이였다. 간섭받지 않고 내가 하고싶은데로 멋있게 사는것. 하지만 현실은 달랐다 혼자살기엔 무서운 세상이였고, 가족을 떠나 혼자 나와 사는건 상상보다 힘든 일이였다.","- 1인가구 소통프로젝트_ 일인극 -")
 				
-				+face("/assets/img/testimonial-avatars/ed4.png","사람들의 1인가구에 대한 인식은 어떨까? 시대가 많이 바뀌었다고는 하지만 혼자사는 청춘을 바라보는 어른들의 시선을 그리 곱지만은 않다. 빨리 결혼해서 자식을 낳아야 하지 않겠느냐, 왜 혼자살려고 하느냐 등 따가운 잔소리가 따라다닌다. 혼자서 생활하다보면 이런 시선은 어른들 뿐 아니라 모든 사람들의 따가운 시선으로 돌아온다.","- 1인가구 소통프로젝트_ 일인극 -")
+				+face("/assets/img/testimonial-avatars/ed4.png","사람들의 1인가구에 대한 인식은 어떨까? 시대가 많이 바뀌었다고는 하지만 혼자사는 청춘을 바라보는 어른들의 시선을 그리 곱지만은 않다. 빨리 결혼해서 자식을 낳아야 하지 않겠느냐, 왜 혼자살려고 하느냐 등 따가운 잔소리가 따라다닌다.","- 1인가구 소통프로젝트_ 일인극 -")
 				
 				+face("/assets/img/testimonial-avatars/ed5.png","주눅 들거 없고 겁먹을 거 없다. 혼자서도 충분히 잘해낼 거니까. 그래왔으니까. 스스로 갇혀 있지 말고 세상과 소통해라 그러면 세상이 바뀔 것이다.","- 1인가구 소통프로젝트_ 일인극 -")
 				
@@ -23,5 +23,5 @@ section.mentoring
 
 
 		.col-1
-			p.home-lead.outdented ...Mentoring people like you...
+			p.home-lead.outdented Editorial Design
 			a(href="").home-cta Schedule a Call
