--- a/assets/css/3-sections/_home-mentoring.sass
+++ b/assets/css/3-sections/_home-mentoring.sass
@@ -1,6 +1,6 @@
 section.mentoring
 	background:
-		image: url(../img/mentoring-bg.jpg)
+		image: url(../img/article-bg.jpg)
 		size: cover
 		position: center
 	color: white
@@ -15,6 +15,7 @@ section.mentoring
 	.faces
 		list-style: none
 		margin: -50px 0
+		margin-left: -50px
 		height: calc(100% + 100px)
 		padding: 0
 		position: relative
@@ -25,8 +26,8 @@ section.mentoring
 			top: 0px
 
 	.face
-		height: 120px
-		width: 200px
+		height: 150px
+		width: 250px
 		background:
 			size: cover
 			position: center
@@ -67,9 +68,11 @@ section.mentoring
 
     .faces
       margin: 0
-      width: 230px *7
-      top: 220px
+      width: 280px *7
+      height: 100px
+      top: 420px
       left: 0px
+
 
     .face
       display: inline-block
@@ -79,7 +82,7 @@ section.mentoring
         display: inline-block
 
     .bubble
-      bottom: 130px
+      bottom: 160px
       left: 22px
       box-sizing: border-box
       margin-left: 0px
