--- a/assets/css/3-sections/_home-youtube.sass
+++ b/assets/css/3-sections/_home-youtube.sass
@@ -1,6 +1,6 @@
 section.youtube
 	background:
-		image: url(../img/article-bg.jpg)
+		image: url(../img/youtube-bgg.png)
 		position: center
 		size: cover
 	color: black
