--- a/assets/css/4-layouts/_home.sass
+++ b/assets/css/4-layouts/_home.sass
@@ -35,6 +35,7 @@
 		justify-content: space-around
 		//column의 순서를 바꿈 
 		//화면이 작아질때 column의 위치
+		//order-first로 column의 좌우 위치를 정함
 	.order-first
 		order: -1	
 
