--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -623,7 +623,7 @@ section.about {
     max-width: 300px; } }
 
 section.youtube {
-  background-image: url(../img/article-bg.jpg);
+  background-image: url(../img/youtube-bgg.png);
   background-position: center;
   background-size: cover;
   color: black; }
@@ -675,7 +675,7 @@ section.youtube {
           padding: 0px 20px 50px; } }
 
 section.mentoring {
-  background-image: url(../img/mentoring-bg.jpg);
+  background-image: url(../img/article-bg.jpg);
   background-size: cover;
   background-position: center;
   color: white;
@@ -687,6 +687,7 @@ section.mentoring {
   section.mentoring .faces {
     list-style: none;
     margin: -50px 0;
+    margin-left: -50px;
     height: calc(100% + 100px);
     padding: 0;
     position: relative;
@@ -696,8 +697,8 @@ section.mentoring {
     section.mentoring .faces.launched {
       top: 0px; }
   section.mentoring .face {
-    height: 120px;
-    width: 200px;
+    height: 150px;
+    width: 250px;
     background-size: cover;
     background-position: center;
     margin: 20px 10px 20px 0px;
@@ -734,8 +735,9 @@ section.mentoring {
 @media (max-width: 640px) {
   section.mentoring .faces {
     margin: 0;
-    width: 1610px;
-    top: 220px;
+    width: 1960px;
+    height: 100px;
+    top: 420px;
     left: 0px; }
   section.mentoring .face {
     display: inline-block;
@@ -743,7 +745,7 @@ section.mentoring {
     section.mentoring .face.back-btn {
       display: inline-block; }
   section.mentoring .bubble {
-    bottom: 130px;
+    bottom: 160px;
     left: 22px;
     box-sizing: border-box;
     margin-left: 0px; } }
@@ -838,6 +840,96 @@ section.articles {
   to {
     -webkit-transform: scale3d(1, 1, 1);
             transform: scale3d(1, 1, 1); } }
+
+@keyframes tada {
+  from {
+    -webkit-transform: scale3d(1, 1, 1);
+            transform: scale3d(1, 1, 1); }
+  10%, 20% {
+    -webkit-transform: scale3d(0.9, 0.9, 0.9) rotate3d(0, 0, 1, -3deg);
+            transform: scale3d(0.9, 0.9, 0.9) rotate3d(0, 0, 1, -3deg); }
+  30%, 50%, 70%, 90% {
+    -webkit-transform: scale3d(1.1, 1.1, 1.1) rotate3d(0, 0, 1, 3deg);
+            transform: scale3d(1.1, 1.1, 1.1) rotate3d(0, 0, 1, 3deg); }
+  40%, 60%, 80% {
+    -webkit-transform: scale3d(1.1, 1.1, 1.1) rotate3d(0, 0, 1, -3deg);
+            transform: scale3d(1.1, 1.1, 1.1) rotate3d(0, 0, 1, -3deg); }
+  to {
+    -webkit-transform: scale3d(1, 1, 1);
+            transform: scale3d(1, 1, 1); } }
+
+section.articles2 {
+  background-repeat: repeat; }
+  section.articles2 .col-1 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center; }
+  section.articles2 .home-cta {
+    color: white;
+    background: #3d96cb; }
+  section.articles2 .article-wrap {
+    margin: -50px 0; }
+    section.articles2 .article-wrap::after {
+      clear: both;
+      content: "";
+      display: table; }
+  section.articles2 .article-thumb {
+    display: block;
+    background-size: cover;
+    background-position: center;
+    width: 25%;
+    float: left;
+    position: relative;
+    overflow: hidden;
+    opacity: 0;
+    -webkit-transition: all 300ms ease-in-out;
+            transition: all 300ms ease-in-out; }
+    section.articles2 .article-thumb.is-visible {
+      opacity: 1; }
+    section.articles2 .article-thumb.is-emph {
+      -webkit-animation-name: tada;
+              animation-name: tada;
+      -webkit-animation-duration: 1s;
+              animation-duration: 1s;
+      -webkit-animation-fill-mode: both;
+              animation-fill-mode: both;
+      z-index: 1; }
+    section.articles2 .article-thumb:after {
+      content: '';
+      display: block;
+      padding-top: 100%; }
+  section.articles2 .article-meta {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(61, 150, 203, 0.7);
+    color: white;
+    padding: 10px;
+    -webkit-transform: translate(0%, 100%) scale(0.5);
+            transform: translate(0%, 100%) scale(0.5);
+    -webkit-transition: all 200ms ease-in-out;
+            transition: all 200ms ease-in-out;
+    opacity: 0; }
+    section.articles2 .article-meta .name {
+      font-size: 18px;
+      line-height: 1.2; }
+    section.articles2 .article-meta .date {
+      font-style: italic; }
+  section.articles2 .article-thumb:hover .article-meta {
+    opacity: 1;
+    -webkit-transform: translate(0%, 0%) scale(1);
+            transform: translate(0%, 0%) scale(1); }
+  @media (max-width: 640px) {
+    section.articles2 .desc-wrap {
+      margin-top: 100px; } }
+  @media (max-width: 999px) and (min-width: 640px) {
+    section.articles2 .article-thumb {
+      width: 33.3%; } }
 
 @keyframes tada {
   from {
