--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -13,6 +13,7 @@
 @import "3-sections/home-youtube";
 @import "3-sections/home-mentoring";
 @import "3-sections/home-articles";
+@import "3-sections/home-articles2";
 @import "3-sections/home-vine";
 @import "3-sections/home-design";
 @import "3-sections/home-notes";
