--- a/assets/css/3-sections/_header.sass
+++ b/assets/css/3-sections/_header.sass
@@ -23,7 +23,7 @@
 			+hide-text
 			max-width: 135px
 			background:
-				image: url(/assets/img/logo-tn.svg)
+				image: url(/assets/img/logoh6.png)
 				repeat: no-repeat
 				position: center
 				//contain은 박스 크기에 딱 들어가게 
