--- a/assets/css/3-sections/_home-articles.sass
+++ b/assets/css/3-sections/_home-articles.sass
@@ -12,7 +12,7 @@ section.articles
 		background: #3d96cb
 
 	.article-wrap
-		margin: -50px 0	
+			
 		+clearfix
 
 	.article-thumb
@@ -20,8 +20,9 @@ section.articles
 		background:
 			size: cover	
 			position: center	
-		width: 25%
+		width: 24.3%
 		float: left
+		border: 1px solid white
 		position: relative
 		overflow: hidden
 		opacity: 0
