--- a/assets/css/3-sections/_home-youtube.sass
+++ b/assets/css/3-sections/_home-youtube.sass
@@ -4,6 +4,7 @@ section.youtube
 		position: center
 		size: cover
 	color: black
+	height: 444px
 	
 	.home-cta
 		color: #e20a0a
@@ -18,7 +19,7 @@ section.youtube
 	.video-strip
 		position: absolute
 		top: 0
-		height: calc(100% + 100px)
+		height: calc(100% + 144px)
 		width: 100%
 		margin: -50px 0
 		background:
