--- a/_jadefiles/section-articles2.jade
+++ b/_jadefiles/section-articles2.jade
@@ -14,5 +14,4 @@ section.articles2#articles2
 		.col-50.flex.flex--center
 			.col-1
 				.desc-wrap
-					p.home-lead.outdented ...Writing and designing articles...
-					a(href="").home-cta Seee all Articles
+					p.home-lead.outdented Package design with Table Tennis
