--- a/_jadefiles/section-design.jade
+++ b/_jadefiles/section-design.jade
@@ -1,29 +1,30 @@
-mixin design-img(link, img, color)
-	a(href="#{link}" data-color="#{color}").design-img-link
-		img(src="assets/img/design-img/#{img}")
+mixin design-img(img, color)
+	a(data-color="#{color}").design-img-link
+		img(src="assets/img/icon/#{img}")
 
 section.design#design
 	.flex.flex--center
 		.col-50.flex.flex--center.dribbble(data-orig-color="#ea4c89")
 			.col-1
-				p.home-lead ...Updating Dribbble...
-				+design-img('https://dribbble.com/shots/854327-Midlife-Crisis', 'drib-1.jpg', 'orange')
-				+design-img('https://dribbble.com/shots/98474-Revenge-Betrayal-Fashion-Spread', 'drib-2.jpg', '#aeb3b0')
-				+design-img('https://dribbble.com/shots/952973-From-The-Blog', 'drib-3.png', '#38decc')
-				+design-img('https://dribbble.com/shots/841118-Lettering', 'drib-4.jpg', '#d21d16')
-				+design-img('https://dribbble.com/shots/107933-DR-Logo-WIP', 'drib-5.jpg', '#890cee')
-				+design-img('https://dribbble.com/shots/719275-Train-Ride-Jams', 'drib-6.jpg', '#d6d599')
-				.cf
-				a(href="https://dribbble.com/travisneilson").home-cta See more on Dribbble
+				p.home-lead App design
+				img(src="assets/img/beauty.png").design-img-copy
+			
 				
 		.col-50.flex.flex--center.behance(data-orig-color="#1769ff")
 			.col-1
-				p.home-lead ...and Behance...
-				+design-img('https://www.behance.net/gallery/7073589/iPhone-Music-App', 'be-1.png', '#5aabd5')
-				+design-img('https://www.behance.net/gallery/4896305/underlines', 'be-2.jpg', '#d32022')
-				+design-img('https://www.behance.net/gallery/25558305/Gradient-Logo', 'be-3.jpg', '#4c4c4c')
-				+design-img('https://www.behance.net/gallery/4916051/Minutiae', 'be-4.jpg', '#f59e82')
-				+design-img('https://www.behance.net/gallery/13152153/Rolling-Tree-Community', 'be-5.jpg', '#d57628')
-				+design-img('https://www.behance.net/gallery/9709469/Dribbble-Shoot-out', 'be-6.png', '#f6c599')
+				p.home-lead.outdented Icon design
+				+design-img('icon01.png', '#9CDF84')
+				+design-img('icon02.png', '#DFAC84')
+				+design-img('icon03.png', '#DF796F')
+				+design-img('icon04.png', '#7E9FC0')
+				+design-img('icon05.png', '#68C09C')
+				+design-img('icon06.png', '#C09F5C')
+				+design-img('icon07.png', '#A096D0')
+				+design-img('icon08.png', '#AF6D8A')
+				+design-img('icon09.png', '#B05A4B')
+				+design-img('icon10.png', '#AB993C')
+				+design-img('icon11.png', '#2DF9B8')
+				+design-img('icon12.png', '#4ED2F9')
+				+design-img('icon13.png', '#DFC1F9')
 				.cf
-				a(href="https://www.behance.net/travisneilson").home-cta See more on Behance
+				
