--- a/assets/css/3-sections/_home-design.sass
+++ b/assets/css/3-sections/_home-design.sass
@@ -6,7 +6,7 @@ section.design
 
   .home-lead
     text-align: center
-    font-size: 30px
+    font-size: 40px
 
   .dribbble, .behance
     background:
@@ -26,16 +26,23 @@ section.design
     font-size: 24px
     color: #ea4c89
 
-
-  .design-img-link
+  .design-img-copy
     display: block
-    float: left
-    width: calc(50% - 14px)
-    border: 2px solid white
+    width: calc(100% - 14px)
     box-shadow: 0px 3px 10px rgba(0,0,0,0.2)
     margin: 5px
     transition: transform 150ms ease-in-out
 
+  .design-img-link
+    display: block
+    float: left
+    width: calc(33% - 30px)
+    padding: 10px
+    //border: 2px solid white
+    //box-shadow: 0px 3px 10px rgba(0,0,0,0.2)
+    margin: 5px
+    transition: transform 150ms ease-in-out
+    
     &:hover
       transform: scale(1.1)
 
