--- a/_jadefiles/section-articles.jade
+++ b/_jadefiles/section-articles.jade
@@ -15,5 +15,5 @@ section.articles#articles
 		.col-50.flex.flex--center.order-first
 			.col-1
 				.desc-wrap
-					p.home-lead.outdented ...Writing and designing articles...
-					a(href="").home-cta Seee all Articles
+					p.home-lead.outdented designing articles with Table Tennis
+					
