--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1003,7 +1003,7 @@ section.design {
   color: white; }
   section.design .home-lead {
     text-align: center;
-    font-size: 30px; }
+    font-size: 40px; }
   section.design .dribbble, section.design .behance {
     background-color: #ea4c89;
     background-image: url(/assets/img/design-bg.png);
@@ -1018,12 +1018,18 @@ section.design {
   section.design .home-cta {
     font-size: 24px;
     color: #ea4c89; }
+  section.design .design-img-copy {
+    display: block;
+    width: calc(100% - 14px);
+    box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.2);
+    margin: 5px;
+    -webkit-transition: -webkit-transform 150ms ease-in-out;
+            transition: transform 150ms ease-in-out; }
   section.design .design-img-link {
     display: block;
     float: left;
-    width: calc(50% - 14px);
-    border: 2px solid white;
-    box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.2);
+    width: calc(33% - 30px);
+    padding: 10px;
     margin: 5px;
     -webkit-transition: -webkit-transform 150ms ease-in-out;
             transition: transform 150ms ease-in-out; }
