--- a/_jadefiles/section-design.jade
+++ b/_jadefiles/section-design.jade
@@ -13,18 +13,19 @@ section.design#design
 		.col-50.flex.flex--center.behance(data-orig-color="#1769ff")
 			.col-1
 				p.home-lead.outdented Icon design
-				+design-img('assets/img/icon/icon01.png', '#9CDF84')
-				+design-img('assets/img/icon/icon02.png', '#DFAC84')
-				+design-img('assets/img/icon/icon03.png', '#DF796F')
-				+design-img('assets/img/icon/icon04.png', '#7E9FC0')
-				+design-img('assets/img/icon/icon05.png', '#68C09C')
-				+design-img('assets/img/icon/icon06.png', '#C09F5C')
-				+design-img('assets/img/icon/icon07.png', '#A096D0')
-				+design-img('assets/img/icon/icon08.png', '#AF6D8A')
-				+design-img('assets/img/icon/icon09.png', '#B05A4B')
-				+design-img('assets/img/icon/icon10.png', '#AB993C')
-				+design-img('assets/img/icon/icon11.png', '#2DF9B8')
-				+design-img('assets/img/icon/icon12.png', '#4ED2F9')
-				+design-img('assets/img/icon/icon13.png', '#DFC1F9')
+				+design-img('icon01.png', '#9CDF84')
+				+design-img('icon02.png', '#DFAC84')
+				+design-img('icon03.png', '#DF796F')
+				+design-img('icon04.png', '#7E9FC0')
+				+design-img('icon05.png', '#68C09C')
+				+design-img('icon06.png', '#C09F5C')
+				+design-img('icon07.png', '#A096D0')
+				+design-img('icon08.png', '#AF6D8A')
+				+design-img('icon09.png', '#B05A4B')
+				+design-img('icon10.png', '#AB993C')
+				+design-img('icon11.png', '#2DF9B8')
+				+design-img('icon12.png', '#4ED2F9')
+				+design-img('icon13.png', '#DFC1F9')
 				.cf
+					a(href="https://www.behance.net/travisneilson").home-cta See more on Behance
 				
