--- a/_jadefiles/section-design.jade
+++ b/_jadefiles/section-design.jade
@@ -12,7 +12,7 @@ section.design#design
 				
 		.col-50.flex.flex--center.behance(data-orig-color="#1769ff")
 			.col-1
-				p.home-lead.outdented Icon design
+				p.home-lead Icon design
 				+design-img('icon01.png', '#9CDF84')
 				+design-img('icon02.png', '#DFAC84')
 				+design-img('icon03.png', '#DF796F')
@@ -27,5 +27,3 @@ section.design#design
 				+design-img('icon12.png', '#4ED2F9')
 				+design-img('icon13.png', '#DFC1F9')
 				.cf
-					a(href="https://www.behance.net/travisneilson").home-cta See more on Behance
-				
