--- a/_jadefiles/section-design.jade
+++ b/_jadefiles/section-design.jade
@@ -1,6 +1,6 @@
 mixin design-img(img, color)
 	a(data-color="#{color}").design-img-link
-		img(src="assets/img/icon/#{img}")
+		img(src="assets/img/zicon/#{img}")
 
 section.design#design
 	.flex.flex--center
