--- a/_jadefiles/section-app.jade
+++ b/_jadefiles/section-app.jade
@@ -2,12 +2,12 @@ mixin design-img(img, color)
 	a(data-color="#{color}").design-img-link
 		img(src="assets/img/zicon/#{img}")
 
-section.design#design
+section.app#app
 	.flex.flex--center
 		.col-50.flex.flex--center.dribbble(data-orig-color="#ea4c89")
 			.col-1
 				p.home-lead App design
-				img(src="assets/img/beauty.png").design-img-copy
+				img(src="assets/img/iphone3.png").design-img-copy
 				.cf
 				
 		.col-50.flex.flex--center.behance(data-orig-color="#1769ff")
