--- a/assets/css/3-sections/_home-app.sass
+++ b/assets/css/3-sections/_home-app.sass
@@ -1,7 +1,7 @@
-.home-sections .design
+.home-sections .app
   padding: 0px
 
-section.design
+section.app
   color: white
 
   .home-lead
@@ -42,13 +42,16 @@ section.design
     //box-shadow: 0px 3px 10px rgba(0,0,0,0.2)
     margin: 5px
     transition: transform 150ms ease-in-out
-    
+
     &:hover
       transform: scale(1.1)
 
     img
-      width: 100%
+      margin: auto
+      //margin-left: 30px
+      width: 70px
       display: block
+    
 
   .cf
     clear: both
