--- a/assets/css/3-sections/_home-package.sass
+++ b/assets/css/3-sections/_home-package.sass
@@ -1,4 +1,4 @@
-section.articles2
+section.package
 	background:
 
 		repeat: repeat
@@ -12,7 +12,7 @@ section.articles2
 		background: #3d96cb
 
 	.article-wrap
-		margin: 100px 0	
+		margin: 50px 0	
 		+clearfix
 
 	.article-thumb
