--- a/assets/css/3-sections/_home-youtube.sass
+++ b/assets/css/3-sections/_home-youtube.sass
@@ -1,10 +1,9 @@
 section.youtube
 	background:
-		image: url(../img/youtube-bgg.png)
+		image: url(../img/vine-bg.jpg)
 		position: center
 		size: cover
 	color: black
-	height: 444px
 	
 	.home-cta
 		color: #e20a0a
@@ -19,14 +18,14 @@ section.youtube
 	.video-strip
 		position: absolute
 		top: 0
-		height: calc(100% + 144px)
+		height: calc(100% + 100px)
 		width: 100%
 		margin: -50px 0
 		background:
 			image: url(../img/video-strip.png)
 			position: center 0px
 			repeat: repeat-y
-			size: 70%
+			size: 90%
 			
 		@media (max-width: 640px)
 			display: none	
