--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -11,11 +11,10 @@
 @import "3-sections/header";
 @import "3-sections/home-about";
 @import "3-sections/home-youtube";
-@import "3-sections/home-mentoring";
+@import "3-sections/home-editorial";
 @import "3-sections/home-articles";
-@import "3-sections/home-articles2";
-@import "3-sections/home-vine";
-@import "3-sections/home-design";
+@import "3-sections/home-package";
+@import "3-sections/home-app";
 @import "3-sections/home-notes";
 @import "3-sections/home-footer";
 
