--- a/_includes/section-about.html
+++ b/_includes/section-about.html
@@ -1,1 +1,1 @@
-<section class="about"><div class="flex flex--center"><div class="col-1 push-right"></div></div></section>
+<section id="about" class="about"><div class="flex flex--center"><div class="col-1 push-right"></div></div></section>
