--- a/_jadefiles/header.jade
+++ b/_jadefiles/header.jade
@@ -1,13 +1,12 @@
 mixin nav-content()
   ul
     li: a(href="#about") About
-    li: a(href="#youtube") YouTube
-    li: a(href="#mentoring") Mentoring
+    li: a(href="#about") illustate
     li: a(href="#articles") Articles
-    li: a(href="#vine") Vine
-    li: a(href="#design") Design
-    li: a(href="#notes") Notes
-    li: a(href="#podcast") Podcast
+    li: a(href="#package") Package
+    li: a(href="#editorial") Editorial
+    li: a(href="#youtube") Advertise
+    li: a(href="#app") App
     li: a(href="#contact") Contact
 
 .mobile-nav
