--- a/_jadefiles/section-notes.jade
+++ b/_jadefiles/section-notes.jade
@@ -1,13 +1,11 @@
 section.notes
 	.flex.flex--center
 		.col-2
-			p.home-lead ...sending email note...
-
-			.notes-signup-box (form)
+			p.home-lead 서한교
 
 	.flex.flex--center
 		.col-1
-			p Notes are weekly email messages that come directly to your inbox. Most of the notes I send will never be available anywhere else. You should sign up.
+			p 시각디자인과에서 공부하고 편집디자인, 패키지디자인, 광고, 웹디자인, 앱북, 일러스트 등 다양한 분야를 경험했습니다. 웹에서의 사용자 경험과 정보전달에 매력을 느껴 웹 개발과 ux/ui를 공부중에 있습니다. 
 		
 		.col-1
-			p A small selection of previous notes that I’ve made public...
+			p 관심분야로는 브랜드 네이밍과 순수예술, 애니메이션 그리고 스포츠에 관심이 많습니다.
