--- a/assets/css/3-sections/_home-about.sass
+++ b/assets/css/3-sections/_home-about.sass
@@ -1,10 +1,10 @@
 section.about
 	background: 
-		image: url(../img/about15.png)
+		image: url(../img/about.png)
 		position: center
 		//이미지사이즈를 크기에 맞춰줌
-		// size: cover
-	height: 1000px
+		size: cover
+	height: 1200px
 
 
 	// h2
