--- a/assets/css/3-sections/_home-articles.sass
+++ b/assets/css/3-sections/_home-articles.sass
@@ -12,7 +12,7 @@ section.articles
 		background: #3d96cb
 
 	.article-wrap
-			
+		margin: -40px 0	
 		+clearfix
 
 	.article-thumb
@@ -74,7 +74,7 @@ section.articles
 
 	@media(max-width: 999px) and (min-width: 640px)
 		.article-thumb
-			width: 33.3%
+			width: 32%
 
 
 @keyframes tada 
