--- a/assets/css/3-sections/_home-editorial.sass
+++ b/assets/css/3-sections/_home-editorial.sass
@@ -1,16 +1,16 @@
-section.mentoring
+section.editorial
 	background:
-		image: url(../img/article-bg.jpg)
+		image: url(../img/boog-bg.png)
 		size: cover
 		position: center
-	color: white
+	color: black
 	overflow: hidden
 
 	.home-cta
 		color: #2cb4db
 
 	.home-lead
-		margin-top: 450px
+		margin-top: 550px
 
 	.faces
 		list-style: none
@@ -26,8 +26,8 @@ section.mentoring
 			top: 0px
 
 	.face
-		height: 150px
-		width: 250px
+		height: 120px
+		width: 200px
 		background:
 			size: cover
 			position: center
@@ -36,6 +36,7 @@ section.mentoring
 		box-shadow: 0px 4px 8px rgba(0,0,0,0.4)
 		position: relative
 		cursor: pointer
+		color: white
 
 		&.back-btn
 			background: white url(../img/back-icon.svg) center no-repeat
@@ -48,7 +49,7 @@ section.mentoring
 		left: 100%
 		bottom: 50%
 		margin-left: 10px
-		width: 300px
+		width: 290px
 		background: rgba(0,0,0,0.8)
 		padding: 20px
 		border-radius: 40px 40px 40px 5px
@@ -64,7 +65,7 @@ section.mentoring
 
 
 @media (max-width: 640px)
-  section.mentoring
+  section.editorial
 
     .faces
       margin: 0
