--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -612,9 +612,10 @@ body {
             transform: translateY(0%); } }
 
 section.about {
-  background-image: url(../img/about15.png);
+  background-image: url(../img/about.png);
   background-position: center;
-  height: 1000px; }
+  background-size: cover;
+  height: 1200px; }
 
 @media (max-width: 640px) {
   section.about h2, section.about .home-lead {
@@ -623,11 +624,10 @@ section.about {
     max-width: 300px; } }
 
 section.youtube {
-  background-image: url(../img/youtube-bgg.png);
+  background-image: url(../img/vine-bg.jpg);
   background-position: center;
   background-size: cover;
-  color: black;
-  height: 444px; }
+  color: black; }
   section.youtube .home-cta {
     color: #e20a0a; }
   section.youtube .flex-video {
@@ -641,13 +641,13 @@ section.youtube {
   section.youtube .video-strip {
     position: absolute;
     top: 0;
-    height: calc(100% + 144px);
+    height: calc(100% + 100px);
     width: 100%;
     margin: -50px 0;
     background-image: url(../img/video-strip.png);
     background-position: center 0px;
     background-repeat: repeat-y;
-    background-size: 70%; }
+    background-size: 90%; }
     @media (max-width: 640px) {
       section.youtube .video-strip {
         display: none; } }
@@ -675,17 +675,17 @@ section.youtube {
         section.youtube .col-1:last-child {
           padding: 0px 20px 50px; } }
 
-section.mentoring {
-  background-image: url(../img/article-bg.jpg);
+section.editorial {
+  background-image: url(../img/boog-bg.png);
   background-size: cover;
   background-position: center;
-  color: white;
+  color: black;
   overflow: hidden; }
-  section.mentoring .home-cta {
+  section.editorial .home-cta {
     color: #2cb4db; }
-  section.mentoring .home-lead {
-    margin-top: 450px; }
-  section.mentoring .faces {
+  section.editorial .home-lead {
+    margin-top: 550px; }
+  section.editorial .faces {
     list-style: none;
     margin: -50px 0;
     margin-left: -50px;
@@ -695,28 +695,29 @@ section.mentoring {
     top: 800px;
     -webkit-transition: all 0.3s ease-in-out;
             transition: all 0.3s ease-in-out; }
-    section.mentoring .faces.launched {
+    section.editorial .faces.launched {
       top: 0px; }
-  section.mentoring .face {
-    height: 150px;
-    width: 250px;
+  section.editorial .face {
+    height: 120px;
+    width: 200px;
     background-size: cover;
     background-position: center;
     margin: 20px 10px 20px 0px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.4);
     position: relative;
-    cursor: pointer; }
-    section.mentoring .face.back-btn {
+    cursor: pointer;
+    color: white; }
+    section.editorial .face.back-btn {
       background: white url(../img/back-icon.svg) center no-repeat;
       background-size: 15px 26px;
       display: none; }
-  section.mentoring .bubble {
+  section.editorial .bubble {
     opacity: 0;
     position: absolute;
     left: 100%;
     bottom: 50%;
     margin-left: 10px;
-    width: 300px;
+    width: 290px;
     background: rgba(0, 0, 0, 0.8);
     padding: 20px;
     border-radius: 40px 40px 40px 5px;
@@ -728,24 +729,24 @@ section.mentoring {
             transform: scale(0);
     -webkit-transform-origin: bottom left;
             transform-origin: bottom left; }
-  section.mentoring .face.has-bubble-open .bubble {
+  section.editorial .face.has-bubble-open .bubble {
     opacity: 1;
     -webkit-transform: scale(1);
             transform: scale(1); }
 
 @media (max-width: 640px) {
-  section.mentoring .faces {
+  section.editorial .faces {
     margin: 0;
     width: 1960px;
     height: 100px;
     top: 420px;
     left: 0px; }
-  section.mentoring .face {
+  section.editorial .face {
     display: inline-block;
     margin-right: 30px; }
-    section.mentoring .face.back-btn {
+    section.editorial .face.back-btn {
       display: inline-block; }
-  section.mentoring .bubble {
+  section.editorial .bubble {
     bottom: 160px;
     left: 22px;
     box-sizing: border-box;
@@ -764,10 +765,12 @@ section.articles {
   section.articles .home-cta {
     color: white;
     background: #3d96cb; }
-  section.articles .article-wrap::after {
-    clear: both;
-    content: "";
-    display: table; }
+  section.articles .article-wrap {
+    margin: -40px 0; }
+    section.articles .article-wrap::after {
+      clear: both;
+      content: "";
+      display: table; }
   section.articles .article-thumb {
     display: block;
     background-size: cover;
@@ -822,7 +825,7 @@ section.articles {
       margin-top: 100px; } }
   @media (max-width: 999px) and (min-width: 640px) {
     section.articles .article-thumb {
-      width: 33.3%; } }
+      width: 32%; } }
 
 @-webkit-keyframes tada {
   from {
@@ -858,25 +861,25 @@ section.articles {
     -webkit-transform: scale3d(1, 1, 1);
             transform: scale3d(1, 1, 1); } }
 
-section.articles2 {
+section.package {
   background-repeat: repeat; }
-  section.articles2 .col-1 {
+  section.package .col-1 {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center; }
-  section.articles2 .home-cta {
+  section.package .home-cta {
     color: white;
     background: #3d96cb; }
-  section.articles2 .article-wrap {
-    margin: 100px 0; }
-    section.articles2 .article-wrap::after {
+  section.package .article-wrap {
+    margin: 50px 0; }
+    section.package .article-wrap::after {
       clear: both;
       content: "";
       display: table; }
-  section.articles2 .article-thumb {
+  section.package .article-thumb {
     display: block;
     background-size: cover;
     background-position: center;
@@ -887,9 +890,9 @@ section.articles2 {
     opacity: 0;
     -webkit-transition: all 200ms ease-in-out;
             transition: all 200ms ease-in-out; }
-    section.articles2 .article-thumb.is-visible {
+    section.package .article-thumb.is-visible {
       opacity: 1; }
-    section.articles2 .article-thumb.is-emph {
+    section.package .article-thumb.is-emph {
       -webkit-animation-name: flipInX;
               animation-name: flipInX;
       -webkit-animation-duration: 1s;
@@ -898,11 +901,11 @@ section.articles2 {
               animation-fill-mode: both;
       -webkit-backface-visibility: visible !important;
               backface-visibility: visible !important; }
-    section.articles2 .article-thumb:after {
+    section.package .article-thumb:after {
       content: '';
       display: block;
       padding-top: 100%; }
-  section.articles2 .article-meta {
+  section.package .article-meta {
     position: absolute;
     top: 0;
     left: 0;
@@ -916,16 +919,16 @@ section.articles2 {
     -webkit-transition: all 200ms ease-in-out;
             transition: all 200ms ease-in-out;
     opacity: 0; }
-    section.articles2 .article-meta .name {
+    section.package .article-meta .name {
       font-size: 18px;
       line-height: 1.2; }
-    section.articles2 .article-meta .date {
+    section.package .article-meta .date {
       font-style: italic; }
   @media (max-width: 640px) {
-    section.articles2 .desc-wrap {
+    section.package .desc-wrap {
       margin-top: 100px; } }
   @media (max-width: 999px) and (min-width: 640px) {
-    section.articles2 .article-thumb {
+    section.package .article-thumb {
       width: 25%; } }
 
 @-webkit-keyframes flipInX {
@@ -974,58 +977,36 @@ section.articles2 {
     -webkit-transform: perspective(400px);
             transform: perspective(400px); } }
 
-section.vine {
-  background-color: #00bf8f;
-  background-image: url(../img/vine-bg.jpg);
-  background-size: cover;
-  color: white; }
-  section.vine iframe {
-    box-shadow: 0px 3px 20px rgba(0, 0, 0, 0.3); }
-  section.vine .home-cta {
-    color: #00bf8f; }
-  section.vine .description {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center; }
-  @media (max-width: 640px) {
-    section.vine .col-1 {
-      text-align: center; }
-    section.vine .description {
-      margin-top: 50px; } }
-
-.home-sections .design {
+.home-sections .app {
   padding: 0px; }
 
-section.design {
+section.app {
   color: white; }
-  section.design .home-lead {
+  section.app .home-lead {
     text-align: center;
     font-size: 40px; }
-  section.design .dribbble, section.design .behance {
+  section.app .dribbble, section.app .behance {
     background-color: #ea4c89;
     background-image: url(/assets/img/design-bg.png);
     background-position: center;
     padding: 50px 0;
     -webkit-transition: background-color 150ms ease-in-out;
             transition: background-color 150ms ease-in-out; }
-    section.design .dribbble.behance, section.design .behance.behance {
+    section.app .dribbble.behance, section.app .behance.behance {
       background-color: #1769ff; }
-      section.design .dribbble.behance .home-cta, section.design .behance.behance .home-cta {
+      section.app .dribbble.behance .home-cta, section.app .behance.behance .home-cta {
         color: #1769ff; }
-  section.design .home-cta {
+  section.app .home-cta {
     font-size: 24px;
     color: #ea4c89; }
-  section.design .design-img-copy {
+  section.app .design-img-copy {
     display: block;
     width: calc(100% - 14px);
     box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.2);
     margin: 5px;
     -webkit-transition: -webkit-transform 150ms ease-in-out;
             transition: transform 150ms ease-in-out; }
-  section.design .design-img-link {
+  section.app .design-img-link {
     display: block;
     float: left;
     width: calc(33% - 30px);
@@ -1033,13 +1014,14 @@ section.design {
     margin: 5px;
     -webkit-transition: -webkit-transform 150ms ease-in-out;
             transition: transform 150ms ease-in-out; }
-    section.design .design-img-link:hover {
+    section.app .design-img-link:hover {
       -webkit-transform: scale(1.1);
               transform: scale(1.1); }
-    section.design .design-img-link img {
-      width: 100%;
+    section.app .design-img-link img {
+      margin: auto;
+      width: 70px;
       display: block; }
-  section.design .cf {
+  section.app .cf {
     clear: both;
     margin-bottom: 20px; }
 
@@ -1047,7 +1029,8 @@ section.notes {
   background-image: url(../img/notes-bg.jpg);
   background-size: cover;
   background-position: center;
-  color: white; }
+  color: white;
+  height: 300px; }
   section.notes .col-1 {
     padding-left: 30px;
     font-size: 18px;
