--- a/_jadefiles/section-notes.jade
+++ b/_jadefiles/section-notes.jade
@@ -5,7 +5,7 @@ section.notes
 
 	.flex.flex--center
 		.col-1
-			p 시각디자인과에서 공부하고 편집디자인, 패키지디자인, 광고, 웹디자인, 앱북, 일러스트 등 다양한 분야를 경험했습니다. 웹에서의 사용자 경험과 정보전달에 매력을 느껴 웹 개발과 ux/ui를 공부중에 있습니다. 
+			p 시각디자인을 전공하고 편집, 패키지, 광고, 웹, 앱북, 일러스트 등 다양한 분야를 경험했습니다. 웹에서의 사용자 경험과 정보전달에 매력을 느껴 웹 개발과 ux/ui를 공부중에 있습니다. 
 		
 		.col-1
-			p 관심분야로는 브랜드 네이밍과 순수예술, 애니메이션 그리고 스포츠에 관심이 많습니다.
+			p 관심분야는 브랜드네이밍과 순수예술, 애니메이션 그리고 스포츠에 관심이 많습니다.
