--- a/assets/css/3-sections/_home-notes.sass
+++ b/assets/css/3-sections/_home-notes.sass
@@ -17,3 +17,11 @@ section.notes
 			padding-right: 30px
 			text-align: right
 			border-right: solid 2px white
+
+		@media (max-width: 640px)
+			padding: 0 10px
+
+			&:first-child
+				padding: 0 10px
+				text-align: left
+				border: none	
