--- a/assets/css/3-sections/_home-articles.sass
+++ b/assets/css/3-sections/_home-articles.sass
@@ -69,8 +69,9 @@ section.articles
 
 	@media(max-width: 640px)
 		.desc-wrap
-			margin-top: 100px
-
+			margin-top: 50px
+			margin-bottom: 120px
+			position: static
 
 	@media(max-width: 999px) and (min-width: 640px)
 		.article-thumb
