--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -684,7 +684,7 @@ section.editorial {
   section.editorial .home-cta {
     color: #2cb4db; }
   section.editorial .home-lead {
-    margin-top: 550px; }
+    margin-top: 400px; }
   section.editorial .faces {
     list-style: none;
     margin: -50px 0;
@@ -822,7 +822,9 @@ section.articles {
             transform: translate(0%, 0%) scale(1); }
   @media (max-width: 640px) {
     section.articles .desc-wrap {
-      margin-top: 100px; } }
+      margin-top: 50px;
+      margin-bottom: 120px;
+      position: static; } }
   @media (max-width: 999px) and (min-width: 640px) {
     section.articles .article-thumb {
       width: 32%; } }
@@ -861,75 +863,79 @@ section.articles {
     -webkit-transform: scale3d(1, 1, 1);
             transform: scale3d(1, 1, 1); } }
 
-section.package {
-  background-repeat: repeat; }
-  section.package .col-1 {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center; }
-  section.package .home-cta {
-    color: white;
-    background: #3d96cb; }
-  section.package .article-wrap {
-    margin: 50px 0; }
-    section.package .article-wrap::after {
-      clear: both;
-      content: "";
-      display: table; }
-  section.package .article-thumb {
+section.package .col-1 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center; }
+
+section.package .home-cta {
+  color: white;
+  background: #3d96cb; }
+
+section.package .article-wrap {
+  margin: 50px 0; }
+  section.package .article-wrap::after {
+    clear: both;
+    content: "";
+    display: table; }
+
+section.package .article-thumb {
+  display: block;
+  background-size: cover;
+  background-position: center;
+  width: 25%;
+  float: left;
+  position: relative;
+  overflow: hidden;
+  opacity: 0;
+  -webkit-transition: all 200ms ease-in-out;
+          transition: all 200ms ease-in-out; }
+  section.package .article-thumb.is-visible {
+    opacity: 1; }
+  section.package .article-thumb.is-emph {
+    -webkit-animation-name: flipInX;
+            animation-name: flipInX;
+    -webkit-animation-duration: 1s;
+            animation-duration: 1s;
+    -webkit-animation-fill-mode: both;
+            animation-fill-mode: both;
+    -webkit-backface-visibility: visible !important;
+            backface-visibility: visible !important; }
+  section.package .article-thumb:after {
+    content: '';
     display: block;
-    background-size: cover;
-    background-position: center;
-    width: 25%;
-    float: left;
-    position: relative;
-    overflow: hidden;
-    opacity: 0;
-    -webkit-transition: all 200ms ease-in-out;
-            transition: all 200ms ease-in-out; }
-    section.package .article-thumb.is-visible {
-      opacity: 1; }
-    section.package .article-thumb.is-emph {
-      -webkit-animation-name: flipInX;
-              animation-name: flipInX;
-      -webkit-animation-duration: 1s;
-              animation-duration: 1s;
-      -webkit-animation-fill-mode: both;
-              animation-fill-mode: both;
-      -webkit-backface-visibility: visible !important;
-              backface-visibility: visible !important; }
-    section.package .article-thumb:after {
-      content: '';
-      display: block;
-      padding-top: 100%; }
-  section.package .article-meta {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: rgba(61, 150, 203, 0.7);
-    color: white;
-    padding: 10px;
-    -webkit-transform: translate(0%, 100%) scale(0.5);
-            transform: translate(0%, 100%) scale(0.5);
-    -webkit-transition: all 200ms ease-in-out;
-            transition: all 200ms ease-in-out;
-    opacity: 0; }
-    section.package .article-meta .name {
-      font-size: 18px;
-      line-height: 1.2; }
-    section.package .article-meta .date {
-      font-style: italic; }
-  @media (max-width: 640px) {
-    section.package .desc-wrap {
-      margin-top: 100px; } }
-  @media (max-width: 999px) and (min-width: 640px) {
-    section.package .article-thumb {
-      width: 25%; } }
+    padding-top: 100%; }
+
+section.package .article-meta {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(61, 150, 203, 0.7);
+  color: white;
+  padding: 10px;
+  -webkit-transform: translate(0%, 100%) scale(0.5);
+          transform: translate(0%, 100%) scale(0.5);
+  -webkit-transition: all 200ms ease-in-out;
+          transition: all 200ms ease-in-out;
+  opacity: 0; }
+  section.package .article-meta .name {
+    font-size: 18px;
+    line-height: 1.2; }
+  section.package .article-meta .date {
+    font-style: italic; }
+
+@media (max-width: 640px) {
+  section.package .desc-wrap {
+    margin-top: 50px; } }
+
+@media (max-width: 999px) and (min-width: 640px) {
+  section.package .article-thumb {
+    width: 25%; } }
 
 @-webkit-keyframes flipInX {
   from {
