--- a/_jadefiles/header.jade
+++ b/_jadefiles/header.jade
@@ -1,7 +1,6 @@
 mixin nav-content()
   ul
-    li: a(href="#about") About
-    li: a(href="#about") illustate
+    li: a(href="#about") Home
     li: a(href="#articles") Articles
     li: a(href="#package") Package
     li: a(href="#editorial") Editorial
