--- a/assets/css/3-sections/_home-app.sass
+++ b/assets/css/3-sections/_home-app.sass
@@ -6,7 +6,8 @@ section.app
 
   .home-lead
     text-align: center
-    font-size: 40px
+    font-size: 35px
+    margin-bottom: 40px
 
   .dribbble, .behance
     background:
