--- a/assets/css/3-sections/_home-notes.sass
+++ b/assets/css/3-sections/_home-notes.sass
@@ -6,16 +6,19 @@ section.notes
 	color: white
 	height: 300px
 
+	.home-lead
+		margin-top: 10px
+
 	.col-1
 		padding-left: 30px
 		font-size: 18px
-		font-style: italic
 		line-height: 1.8
-
+		margin-top: 30px
+		padding-right: 30px
 		&:first-child
 			padding-left: 0
 			padding-right: 30px
-			text-align: right
+			text-align: center
 			border-right: solid 2px white
 
 		@media (max-width: 640px)
