--- a/_jadefiles/header.jade
+++ b/_jadefiles/header.jade
@@ -3,6 +3,7 @@ mixin nav-content()
     li: a(href="#about") Home
     li: a(href="#articles") Articles
     li: a(href="#package") Package
+    li: a(href="#poster") Poster
     li: a(href="#editorial") Editorial
     li: a(href="#youtube") Advertise
     li: a(href="#app") App
