--- a/_jadefiles/section-app.jade
+++ b/_jadefiles/section-app.jade
@@ -6,13 +6,13 @@ section.app#app
 	.flex.flex--center
 		.col-50.flex.flex--center.dribbble(data-orig-color="#ea4c89")
 			.col-1
-				p.home-lead App design
+				// p.home-lead App design
 				img(src="assets/img/iphone3.png").design-img-copy
 				.cf
 				
 		.col-50.flex.flex--center.behance(data-orig-color="#1769ff")
 			.col-1
-				p.home-lead Icon design
+				// p.home-lead Icon design
 				+design-img('icon01.png', '#9CDF84')
 				+design-img('icon02.png', '#DFAC84')
 				+design-img('icon03.png', '#DF796F')
