--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>{{ page.title }}</title>
     <meta name="viewport" content="width=device-width">
+    <link rel="shortcut icon" href="/assets/img/favico.ico">
     <link rel="stylesheet" href="/assets/css/main.css">
-    <link rel="shortcut icon" href="/assets/img/favico.ico"/>
     <script src="//code.jquery.com/jquery-3.0.0.min.js"></script>
   </head>
   <body>
