--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -12,6 +12,7 @@
 @import "3-sections/home-about";
 @import "3-sections/home-youtube";
 @import "3-sections/home-editorial";
+@import "3-sections/home-poster";
 @import "3-sections/home-articles";
 @import "3-sections/home-package";
 @import "3-sections/home-app";
